added hash
